przywrócenie "n" w kilku miejscach...
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1950 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -10,7 +10,7 @@
 module_encryption=m
 
 # Speech synthesis support
-module_speech=m
+module_speech=n
 
 # General sound support
 module_sound=m
@@ -22,13 +22,13 @@ module_ext_sound=m
 module_dsp_sound=m
 
 # Arts sound server support
-module_arts_sound=m
+module_arts_sound=n
 
 # ESD sound server support
-module_esd_sound=m
+module_esd_sound=n
 
 # Network Audio System support
-module_nas_sound=m
+module_nas_sound=n
 
 # SMS module
 module_sms=m
