prace przy statycznych modulach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1964 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -92,9 +92,8 @@ PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
 QT_MOC_DIR = @QT_MOC_DIR@
-STATIC_MODULES_CLOSES = @STATIC_MODULES_CLOSES@
 STATIC_MODULES_DECLS = @STATIC_MODULES_DECLS@
-STATIC_MODULES_INITS = @STATIC_MODULES_INITS@
+STATIC_MODULES_REGRS = @STATIC_MODULES_REGRS@
 STRIP = @STRIP@
 VERSION = @VERSION@
 XFREE_INCLUDES = @XFREE_INCLUDES@
