--- a/kadu/modules_static.cpp.in
+++ b/kadu/modules_static.cpp.in
@@ -1,15 +1,7 @@
 
-#include "modules.h"
-#include "message_box.h"
-
 @STATIC_MODULES_DECLS@
 
-void ModulesManager::initStaticModules()
+void ModulesManager::registerStaticModules()
 {
-@STATIC_MODULES_INITS@
-}
-
-void ModulesManager::closeStaticModules()
-{
-@STATIC_MODULES_CLOSES@
+@STATIC_MODULES_REGRS@
 }
