--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -92,9 +92,8 @@ PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
 QT_MOC_DIR = @QT_MOC_DIR@
-STATIC_MODULES_CLOSES = @STATIC_MODULES_CLOSES@
 STATIC_MODULES_DECLS = @STATIC_MODULES_DECLS@
-STATIC_MODULES_INITS = @STATIC_MODULES_INITS@
+STATIC_MODULES_REGRS = @STATIC_MODULES_REGRS@
 STRIP = @STRIP@
 VERSION = @VERSION@
 XFREE_INCLUDES = @XFREE_INCLUDES@
