--- a/kadu-config.h.in
+++ b/kadu-config.h.in
@@ -114,6 +114,9 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* Define if you want system signals handling */
+#undef SIG_HANDLING_ENABLED
+
 /* List of modules compiled-in into Kadu binary */
 #undef STATIC_MODULES
 
