kasowanie starych modułow, statyczne wedlug 0.3.7
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2011 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -7,16 +7,16 @@
 #
 
 # OpenSSL encrypted chat support
-module_encryption=m
+module_encryption=y
 
 # Speech synthesis support
 module_speech=n
 
 # General sound support
-module_sound=m
+module_sound=y
 
 # External application sound support
-module_ext_sound=m
+module_ext_sound=y
 
 # Direct /dev/dsp sound support
 module_dsp_sound=m
@@ -31,16 +31,16 @@ module_esd_sound=n
 module_nas_sound=n
 
 # SMS module
-module_sms=m
+module_sms=y
 
 # default gateways for SMS module
-module_default_sms=m
+module_default_sms=y
 
 # Auto away module
-module_autoaway=m
+module_autoaway=y
+
+# Autoresponder module
+module_autoresponder=m
 
 # Echo sample module
 module_echo=n
-
-# Autoresponder sample module
-module_autoresponder=n
