--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -313,7 +313,7 @@ $(module_moc_cpp_files):
 %_moc.cpp: %.h
 	$(QT_MOC_DIR)/moc -o $@ $<
 
-install-data-local:
+install-data-local: uninstall-local
 	$(mkinstalldirs) "$(DESTDIR)/$(includedir)/kadu/modules/"
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/"
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/translations"
