moduly: kompilator c++ dla plikow cpp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2036 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -297,7 +297,7 @@ $(module_moc_cpp_files):
 	$(AR) rs $@ $(module_o_files)
 
 %.d: %.cpp
-	$(CC) -M $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) $< | \
+	$(CXX) -M $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) $< | \
 	sed "s,\(.*\):,$(basename $@).o $@:," > $@
 
 %.d: %.c
@@ -305,7 +305,7 @@ $(module_moc_cpp_files):
 	sed "s,\(.*\):,$(basename $@).o $@:," > $@
 
 %.o: %.cpp
-	$(CC) -o $@ -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)  $(CXXFLAGS)
+	$(CXX) -o $@ -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)  $(CXXFLAGS)
 
 %.o: %.c
 	$(CC) -o $@ -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)
