--- a/.config
+++ b/.config
@@ -9,6 +9,9 @@
 # Tray icon support
 module_docking=y
 
+# XLib tray docking techniques module
+module_x11_docking=y
+
 # OpenSSL encrypted chat support
 module_encryption=y
 
