deleteLater() na obiektach Library oraz przywrócenie okna przy wyładowywaniu x11_docking
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2057 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -7,46 +7,46 @@
 #
 
 # Tray icon support
-module_docking=y
+module_docking=m
 
 # XLib tray docking techniques module
-module_x11_docking=y
+module_x11_docking=m
 
 # OpenSSL encrypted chat support
-module_encryption=y
+module_encryption=m
 
 # Speech synthesis support
-module_speech=n
+module_speech=m
 
 # General sound support
-module_sound=y
+module_sound=m
 
 # External application sound support
-module_ext_sound=y
+module_ext_sound=m
 
 # Direct /dev/dsp sound support
 module_dsp_sound=m
 
 # Arts sound server support
-module_arts_sound=n
+module_arts_sound=m
 
 # ESD sound server support
-module_esd_sound=n
+module_esd_sound=m
 
 # Network Audio System support
-module_nas_sound=n
+module_nas_sound=m
 
 # SMS module
-module_sms=y
+module_sms=m
 
 # default gateways for SMS module
-module_default_sms=y
+module_default_sms=m
 
 # Auto away module
-module_autoaway=y
+module_autoaway=m
 
 # Autoresponder module
 module_autoresponder=m
 
 # Echo sample module
-module_echo=n
+module_echo=m
