--- a/.config
+++ b/.config
@@ -7,19 +7,19 @@
 #
 
 # Tray icon support
-module_docking=m
+module_docking=y
 
 # XLib tray docking techniques module
-module_x11_docking=m
+module_x11_docking=y
 
 # OpenSSL encrypted chat support
-module_encryption=m
+module_encryption=y
 
 # Speech synthesis support
-module_speech=m
+module_speech=n
 
 # General sound support
-module_sound=m
+module_sound=y
 
 # External application sound support
 module_ext_sound=m
@@ -28,25 +28,25 @@ module_ext_sound=m
 module_dsp_sound=m
 
 # Arts sound server support
-module_arts_sound=m
+module_arts_sound=n
 
 # ESD sound server support
-module_esd_sound=m
+module_esd_sound=n
 
 # Network Audio System support
-module_nas_sound=m
+module_nas_sound=n
 
 # SMS module
-module_sms=m
+module_sms=y
 
 # default gateways for SMS module
-module_default_sms=m
+module_default_sms=y
 
 # Auto away module
-module_autoaway=m
+module_autoaway=y
 
 # Autoresponder module
 module_autoresponder=m
 
 # Echo sample module
-module_echo=m
+module_echo=n
