--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -76,8 +76,6 @@ CXX = @CXX@
 DEPDIR = @DEPDIR@
 GADU_INCLUDES = @GADU_INCLUDES@
 GADU_LIBS = @GADU_LIBS@
-GSM_INCLUDES = @GSM_INCLUDES@
-GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
@@ -239,12 +237,16 @@ all:
 		MODULE_HEADERS= && \
 		MODULE_CXXFLAGS= && \
 		MODULE_LDFLAGS= && \
+		MODULE_3RDPARTY= && \
 		. ./$$dir/spec && \
 		MODULE_CXXFLAGS="$$MODULE_CXXFLAGS "`cat $$dir/cxxflags` && \
 		MODULE_LDFLAGS="$$MODULE_LDFLAGS "`cat $$dir/ldflags` && \
 		echo && \
 		echo -e "\033[32m>>>\033[0m Compiling $$dir module [LD=$$MODULE_LDFLAGS,CXX=$$MODULE_CXXFLAGS] ..." && \
 		echo && \
+		for mod_3rdparty in $$MODULE_3RDPARTY; do \
+			$(MAKE) -C $$dir/$$mod_3rdparty; \
+		done && \
 		moc_cpp_files="" && \
 		o_files="" && \
 		h_files="" && \
