--- a/.config
+++ b/.config
@@ -18,6 +18,9 @@ module_encryption=y
 # Speech synthesis support
 module_speech=n
 
+# Voice chat support
+module_voice=y
+
 # General sound support
 module_sound=y
 
