--- a/.config
+++ b/.config
@@ -25,7 +25,7 @@ module_voice=y
 module_sound=y
 
 # External application sound support
-module_ext_sound=m
+module_ext_sound=y
 
 # Direct /dev/dsp sound support
 module_dsp_sound=m
