--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -139,12 +139,12 @@ INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) 
 kadu_LDADD = \
 $(PTHREAD_LIBS) $(PNG_LIBS) \
 $(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS) \
-$(foreach mod,$(basename $(static_modules)),../modules/$(mod)/$(mod).a)
+$(foreach mod,$(basename $(static_modules)),../modules/$(mod)/$(mod).a) \
+$(static_modules_ldflags)
 
 
 kadu_LDFLAGS = \
-$(PTHREAD_LDFLAGS) -rdynamic $(OPENSSL_LIBS) \
-$(static_modules_ldflags)
+$(PTHREAD_LDFLAGS) -rdynamic $(OPENSSL_LIBS)
 
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
