ikonka do messageboxa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2095 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -60,3 +60,4 @@ ClearHistory=eraser.png
 OpenFile=fileopen.png
 AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
+Warning=msgbox_warning.png
