obrazek ladowania obrazka ;)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2097 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -61,3 +61,4 @@ OpenFile=fileopen.png
 AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
 Warning=msgbox_warning.png
+LoadingImage=loading.png
