--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -62,3 +62,4 @@ AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
 Warning=msgbox_warning.png
 LoadingImage=loading.png
+Emoticon=emoticon.png
