--- a/.config
+++ b/.config
@@ -53,3 +53,16 @@ module_autoresponder=m
 
 # Echo sample module
 module_echo=n
+
+#
+# There are some external modules below, made by third parties, but
+# accepted by Kadu Team and quite well supported on our forum. When
+# you choose to install some of these, the sources will be downloaded
+# from their original web pages, so don't blame us when they are
+# (maybe just temporary) unavailable.
+
+# TCL scripting support and KaduPro extensions
+module_tcl_scripting=n
+
+# Xmms player support
+module_xmms=n
