wydzielenie dokowania dla WindowMakera
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2121 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -12,6 +12,9 @@ module_docking=y
 # XLib tray docking techniques module
 module_x11_docking=y
 
+# WindowMaker docking module
+module_wmaker_docking=n
+
 # OpenSSL encrypted chat support
 module_encryption=y
 
