rozszerzenia dla modulow: MODULE_TOOLS, MODULE_CONFIGURE_CMD
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2136 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -208,10 +208,12 @@ AC_DEFUN(PROCESS_MODULE_SPEC_FILES,[
 			for tool in $MODULE_TOOLS; do \
 				FIND_TOOL([$tool]) \
 			done; \
-			if eval "$MODULE_CONFIGURE_CMD"; then \
-				echo "Additional module configuration command successed."; \
-			else \
-				AC_MSG_ERROR([Additional module configuration command failed!]); \
+			if test -n "$MODULE_CONFIGURE_CMD"; then \
+				if eval "$MODULE_CONFIGURE_CMD"; then \
+					echo "Additional module configuration command successed."; \
+				else \
+					AC_MSG_ERROR([Additional module configuration command failed!]); \
+				fi; \
 			fi; \
 			echo -n "$MODULE_CXXFLAGS" > modules/$mod/cxxflags; \
 			if test -z `expr " $shared_modules " : ".* \($mod\) "`; then \
