--- a/.config
+++ b/.config
@@ -63,9 +63,16 @@ module_echo=n
 # you choose to install some of these, the sources will be downloaded
 # from their original web pages, so don't blame us when they are
 # (maybe just temporary) unavailable.
+#
 
 # TCL scripting support and KaduPro extensions
 module_tcl_scripting=n
 
 # Xmms player support
 module_xmms=n
+
+# AmaroK player support
+module_amarok=n
+
+# Description from file module
+module_filedesc=n
