nowe okienko about (kid)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2145 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -63,3 +63,4 @@ RemoveFromNotifyList=back.png
 Warning=msgbox_warning.png
 LoadingImage=loading.png
 Emoticon=emoticon.png
+AboutIcon=abouticon.png
