Załadowany patch KID-a na menagera modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2174 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -64,3 +64,6 @@ Warning=msgbox_warning.png
 LoadingImage=loading.png
 Emoticon=emoticon.png
 AboutIcon=abouticon.png
+
+ManageModulesWindowIcon=abouticon.png
+LoadModuleButton=reload.png
