next patch KID-a
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2210 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -66,5 +66,7 @@ Emoticon=emoticon.png
 AboutIcon=abouticon.png
 
 ManageModulesWindowIcon=share.png
-LoadModuleButton=reload.png
-ImportExportWindowIcon=impexpicon.png 
+ImportExportWindowIcon=impexpicon.png
+ManageUsersWindowIcon=manusricon.png
+AddUserButton=reload.png
+UpdateUserButton=reload.png
