KID - okno ignorowanych
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2215 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -68,5 +68,8 @@ AboutIcon=abouticon.png
 ManageModulesWindowIcon=share.png
 ImportExportWindowIcon=impexpicon.png
 ManageUsersWindowIcon=manusricon.png
+ManageIgnoredWindowIcon=manageignored.png
 AddUserButton=reload.png
 UpdateUserButton=reload.png
+DeleteIgnoredButton=remove.png
+AddIgnoredButton=reload.png
