--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -92,6 +92,7 @@ STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
+enable_pheaders = @enable_pheaders@
 install_sh = @install_sh@
 shared_modules = @shared_modules@
 static_modules = @static_modules@
@@ -131,7 +132,16 @@ userlist.cpp userlist.h userlist_moc.cpp \
 updates.cpp updates.h
 
 
-INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
+
+###########################################################################
+# Precompiled headers support
+###########################################################################
+@PHEADERS_ENABLED_TRUE@PHEADERS_INCLUDES = -I.. -include kadu-headers.h
+@PHEADERS_ENABLED_TRUE@PHEADERS_CLEANFILES = *.h.gch
+
+
+###########################################################################
+INCLUDES = $(PHEADERS_INCLUDES) $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
 
 kadu_LDADD = \
 $(PTHREAD_LIBS) $(PNG_LIBS) \
@@ -147,7 +157,7 @@ $(PTHREAD_LDFLAGS) -rdynamic $(OPENSSL_LIBS)
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
 
 EXTRA_DIST = hi16-app-kadu.png hi32-app-kadu.png hi48-app-kadu.png kadu.desktop
-CLEANFILES = *_moc.cpp
+CLEANFILES = *_moc.cpp $(PHEADERS_CLEANFILES)
 subdir = kadu
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/kadu-config.h
@@ -490,6 +500,17 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am uninstall-local
 	mostlyclean-generic tags uninstall uninstall-am \
 	uninstall-binPROGRAMS uninstall-info-am uninstall-local
 
+
+# dirty hack - leading space required because od automake "if" support
+# time to say automake goodbye?
+ ifeq ($(enable_pheaders),yes)
+
+%.h.gch: %.h
+	$(CXX) -o $@ -c $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)  $(CXXFLAGS)
+
+$(kadu_OBJECTS): kadu-headers.h.gch
+
+ endif
 
 %_moc.cpp: %.h
 	$(QT_MOC_DIR)/moc -o $@ $<
