--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -92,6 +92,7 @@ STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
+enable_pheaders = @enable_pheaders@
 install_sh = @install_sh@
 shared_modules = @shared_modules@
 static_modules = @static_modules@
