--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -69,7 +69,10 @@ ManageModulesWindowIcon=share.png
 ImportExportWindowIcon=impexpicon.png
 ManageUsersWindowIcon=manusricon.png
 ManageIgnoredWindowIcon=manageignored.png
+PersonalInformationWindowIcon=personalinfo.png
 AddUserButton=reload.png
 UpdateUserButton=reload.png
 DeleteIgnoredButton=remove.png
 AddIgnoredButton=reload.png
+SavePersonalInfoButton=filesave.png
+ReloadPersonalInfoButton=reload.png
