--- a/.config
+++ b/.config
@@ -58,11 +58,11 @@ module_autoresponder=m
 module_echo=n
 
 #
-# There are some external modules below, made by third parties, but
+# Below are some external modules, made by third parties, but
 # accepted by Kadu Team and quite well supported on our forum. When
-# you choose to install some of these, the sources will be downloaded
+# you choose to install any of these, the sources will be downloaded
 # from their original web pages, so don't blame us when they are
-# (maybe just temporary) unavailable.
+# (maybe just temporarily) unavailable.
 #
 
 # TCL scripting support and KaduPro extensions
