zaleznosci prekompilowanego naglowka
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2226 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -45,6 +45,12 @@ endif
 # time to say automake goodbye?
  ifeq ($(enable_pheaders),yes)
 
+-include kadu-headers.d
+
+kadu-headers.d: kadu-headers.h
+	$(CXX) -M $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) $< | \
+	sed "s,\(.*\):,$(basename $@).h.gch $@:," > $@
+
 %.h.gch: %.h
 	$(CXX) -o $@ -c $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)  $(CXXFLAGS)
 
