--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -71,6 +71,10 @@ ManageUsersWindowIcon=manusricon.png
 ManageIgnoredWindowIcon=manageignored.png
 PersonalInformationWindowIcon=personalinfo.png
 ChangePasswordWindowIcon=password.png
+RegisterAccountButton=reload.png
+UnregisterAccountButton=reload.png
+RegisterWindowIcon=registeraccount.png
+UnregisterWindowIcon=unregisteraccount.png
 AddUserButton=reload.png
 UpdateUserButton=reload.png
 ChangePasswordEmailButton=reload.png
